bug 758280. Refactor the way we handle `WM_NCCALCSIZE` messages and how we keep track of our frame offsets. r=jimm